# the-dmz

./: .commitlintrc.json  .dockerignore  .env.example  .gitattributes  .gitignore  .issue-temp.md  .lintstagedrc.json  .owasp-dependency-check-suppressions.xml  .prettierignore  .prettierrc  .secretlintignore  .secretlintrc.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MEMORY.md  Main.tscn  README.md  SOUL.md  auto-create-issues.sh  auto-develop.sh  docker-compose.yml  email_generator.gd  email_generator.gd.uid  eslint.config.cjs  eslint.config.mjs  icon.svg.import  main.gd  main.gd.uid  package.json  playwright.config.ts  pnpm-lock.yaml  project.godot  renovate.json  story.md  tsconfig.base.json  turbo.json  vitest.workspace.ts
.husky/: pre-commit
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: API_VERSIONING_WORKFLOW.md  BRANCH_PROTECTION.md  BRD.md  CONTRACT_PARITY_WORKFLOW.md  EVENT_BOUNDARY_ENFORCEMENT.md  EVENT_CONTRACT_EVOLUTION.md  LOGGING_CONTRACT.md  M1_BACKEND_CONTRACT.md  M1_FRONTEND_CONTRACT.md  MILESTONES.md  OPENAPI_WORKFLOW.md  PAGINATION_CONTRACT_WORKFLOW.md  PRIMITIVE_CONTRACT.md  ROUTE_BOUNDARY_ENFORCEMENT.md  SCHEMA_BOUNDARY_ENFORCEMENT.md  auth-events.md  data-boundary-enforcement.md  db-tenant-context-contract.md  disaster_recovery_runbook.md  error-contract-workflow.md  frontend-boundary-policy.md  loading-state-contract.md  mfa-contract-workflow.md  password-policy-workflow.md  redis-keyspace-contract-workflow.md  story.md  (+3 more)
(+1925 files in other folders)
